<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:layout_margin="16dp"
	android:orientation="vertical"
	tools:context=".MainActivity">

	<TextView
		android:id="@+id/title_view"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginTop="32dp"
		android:text="Hello Espresso!"
		android:textAlignment="center"
		android:textSize="32sp" />

	<EditText
		android:id="@+id/title_input"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginTop="16dp"
		android:hint="edit title..." />

	<Button
		android:id="@+id/change_title_button"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_gravity="center"
		android:text="Change Title" />

	<Button
		android:id="@+id/pass_title_button"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_gravity="center"
		android:text="Change Title and send to activity" />

	<LinearLayout
		android:orientation="horizontal"
		android:layout_width="match_parent"
		android:layout_height="wrap_content">

		<EditText
			android:id="@+id/email_input"
			android:layout_weight="1"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_marginTop="16dp"
			android:hint="enter email..."
			android:inputType="textEmailAddress" />

		<CheckBox
			android:layout_gravity="center"
			android:id="@+id/check_email_box"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content" />

	</LinearLayout>

	<LinearLayout
		android:orientation="horizontal"
		android:layout_width="match_parent"
		android:layout_height="wrap_content">

		<EditText
			android:id="@+id/password_input"
			android:layout_weight="1"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_marginTop="16dp"
			android:hint="enter password..."
			android:inputType="textPassword" />

		<CheckBox
			android:layout_gravity="center"
			android:id="@+id/check_password_box"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content" />

	</LinearLayout>

</LinearLayout>