<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	tools:context=".ShowTitleActivity">

	<TextView
		android:id="@+id/show_title_view"
		android:text="Espresso"
		android:textSize="32sp"
		android:gravity="center"
		android:layout_width="match_parent"
		android:layout_height="match_parent" />

</LinearLayout>